# NydusNet

./: .gitignore  pyproject.toml
.github/workflows/: build-and-package.yml  build-and-release.yml
ansible/: setup_vps.yml
ansible/files/: setup_tunnel.sh.j2
docs/: changelog-v1.1.1.md  changelog-v1.2.0.md  changelog-v1.3.0.md  changelog-v1.3.1.md  changelog-v1.3.2.md  readme.md
resources/ansible/: setup_vps.yml
resources/server-setup/: nginx_heartbeat.conf.j2  setup_tunnel.sh.j2
scripts/: build.py  create_installer.iss  create_installer.py  hook-ansible.py
src/: app.py  main.py
src/controllers/: ansible_manager.py  config_manager.py  server_provisioner.py  syncthing_manager.py  tunnel_manager.py
src/mocks/: termios.py
src/utils/: crypto.py  logger.py
src/views/: dashboard_view.py  dashboard_view_demo.py  debug_view.py  dialogs.py  history_view.py  history_view_demo.py  servers_view.py  settings_view.py  settings_view_demo.py
